--- a/Demo Project PL/Views/_ViewImports.cshtml
+++ b/Demo Project PL/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Demo_Project_PL
 @using Demo_Project_PL.Models
+@using Demo_Project_DAL.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
